syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (stream HashCheckResult) {}
  rpc NoStreaming (HelloRequest) returns (HashCheckResult) {}
  rpc ServerCompression (HelloRequest) returns (HashCheckResult) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}



message HashCheckResult {
  Epc epc =1;
  bool result=2;
  repeated FeatureHashParams featureParams=3;
  repeated string imsi=4;
}

message FeatureHashParams {
    string imsi = 1;
    string static_ip = 2;
    HssProfile profile = 3;
    string imei = 4;
    string qos_profile_name = 5;
}

enum HssProfile {
     Default = 0; //default
     Profile1 = 1; //Low
     Profile2 = 2; //Medium
     Profile3 = 3; //High
}

message Epc {
  //unique pnmID assigned by PNM microservice
  string identifier = 1;
  //populated only for slices in edgeHW
  string hw_id =2;
}